update tests for db use

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ actix-service = "=2.0.0-beta.5"
 actix-web = "4.0.0-beta.5"
 config = "0.11.0"
 serde = { version = "1", features = ["derive"] }
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
 
 [dev-dependencies]
 actix-rt = "2"
