--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,23 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
-actix-http = "=3.0.0-beta.5"
-actix-service = "=2.0.0-beta.5"
-actix-web = "4.0.0-beta.5"
+actix-http = "=3.0.0-beta.8"
+actix-web = "=4.0.0-beta.8"
+
 config = "0.11.0"
 serde = { version = "1", features = ["derive"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.15"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.2.5"
+tracing-log = "0.1.2"
+tracing-actix-web = "0.4.0-beta.8"
 
 [dev-dependencies]
 actix-rt = "2"
+once_cell = "1.8.0"
 reqwest = "0.11"
 tokio = "1"
 
