--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -92,6 +92,8 @@ jobs:
           sudo apt-get install libpq-dev -y
           cargo install --version=0.5.5 --locked sqlx-cli --no-default-features --features postgres
           SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Check sqlx metadata file
+        run: cargo sqlx prepare --check -- --bin zero2prod
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
